hw1/entities/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw1
  labels:
    app: hw1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw1
  template:
    metadata:
      labels:
        app: hw1
    spec:
      containers:
        - name: hw1-container
          image: diacrome/node-web-app
          ports:
            - containerPort: 8000
