hw1/entities/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw1-service
spec:
  type: LoadBalancer
  selector:
    app: hw1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
